--- a/libs/client-web/cart/feature/order-process/src/lib/delivery-address/user-address-form/user-address-form.component.scss
+++ b/libs/client-web/cart/feature/order-process/src/lib/delivery-address/user-address-form/user-address-form.component.scss
@@ -20,6 +20,13 @@
   &__country {
     min-width: 100%;
   }
+
+  &__buttons {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    margin-top: 1rem;
+  }
 }
 
 @container form (min-width: 768px) {
