--- a/libs/client-web/cart/feature/order-process/src/lib/payment-method/payment-method.component.scss
+++ b/libs/client-web/cart/feature/order-process/src/lib/payment-method/payment-method.component.scss
@@ -1,3 +1,9 @@
+:host ::ng-deep {
+  .p-inputotp-input {
+    width: 3rem;
+  }
+}
+
 .payment-method {
   display: flex;
   flex-direction: column;
@@ -27,5 +33,9 @@
         gap: 1rem;
       }
     }
+  }
+
+  &__input-otp {
+    margin: 0 auto;
   }
 }
