--- a/libs/client-web/cart/feature/order-process/src/lib/shipping-method/shipping-method.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/shipping-method/shipping-method.component.html
@@ -1,17 +1,17 @@
 <lib-section-wrapper header="Shipping">
   <div class="shipping-method__container">
     @if (loading()) {
-      <div>Loading...</div>
+      <p-skeleton width="100%" height="3rem" />
+      <p-skeleton width="100%" height="3rem" />
     } @else if (error()) {
       <div>{{ error() }}</div>
     } @else if (shippingMethods().length > 0) {
-      <!-- <div class="flex flex-column gap-3"> -->
       @for (sm of shippingMethods(); track sm.id) {
         <lib-order-process-detail-element
           [price]="sm.price"
           [value]="sm"
           [label]="sm.name"
-          [isActive]="selectedShippingMethod.value?.id === sm.id"
+          [isActive]="selectedShippingMethod()?.id === sm.id"
           (clickEvent)="selectShippingMethod($event)"
         >
           <span class="pi pi-truck"></span>
