--- a/libs/client-web/cart/feature/order-process/src/lib/delivery-address/delivery-address.component.scss
+++ b/libs/client-web/cart/feature/order-process/src/lib/delivery-address/delivery-address.component.scss
@@ -13,17 +13,35 @@
     gap: 1rem;
 
     &__title {
+      font-size: 0.9rem;
       color: var(--text-color-secondary);
       font-weight: 600;
+      width: 6rem;
     }
 
     &__content {
-      font-size: 1.5rem;
+      font-size: 1rem;
     }
+  }
+
+  &__update-button {
+    max-width: min-content;
   }
 }
 
 .container {
   display: flex;
   flex-direction: column;
+}
+
+.loading {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  &__row {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
 }
