--- a/libs/client-web/cart/feature/order-process/src/lib/payment-method/credit-card-form/credit-card-form.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/payment-method/credit-card-form/credit-card-form.component.html
@@ -4,8 +4,8 @@
 @if (error()) {
   <div>{{ error() }}</div>
 }
-@if (!creditCard() && !loading()) {
-  <form [formGroup]="form" class="credit-card-form">
+@if ((!creditCard() || changeCreditCard()) && !loading()) {
+  <form [formGroup]="form" (ngSubmit)="submit()" class="credit-card-form">
     <lib-form-field label="Card number" [isRequired]="true">
       <p-inputMask
         slot="input"
@@ -67,9 +67,35 @@
         }
       </lib-form-field>
     </div>
-    <p-button label="Add credit card" />
+
+    <div class="credit-card-form__buttons">
+      <p-button
+        [outlined]="true"
+        (onClick)="changeCreditCard.set(false)"
+        label="Cancel"
+      />
+      <p-button severity="secondary" label="Add credit card" type="submit" />
+    </div>
   </form>
 }
-@if (!!creditCard() && !loading()) {
-  <div>{{ creditCard()?.number }}</div>
+
+@if (!!creditCard() && !changeCreditCard() && !loading()) {
+  <div class="change-credit-card">
+    <div class="change-credit-card__text">
+      <img
+        class="change-credit-card__master-card"
+        src="assets/icons/visa-card.svg"
+      />
+      <img
+        class="change-credit-card__master-card"
+        src="assets/icons/mastercard.svg"
+      />
+      <span> {{ creditCard()?.number }}</span>
+    </div>
+    <p-button
+      [text]="true"
+      label="change"
+      (onClick)="changeCreditCard.set(true)"
+    />
+  </div>
 }
