--- a/libs/client-web/cart/feature/order-process/src/lib/summary/summary.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/summary/summary.component.html
@@ -5,42 +5,63 @@
     <lib-payment-method />
   </div>
 
-  <div class="summary__section">
+  <div class="summary__section summary__section--smaller-gap">
     <div class="summary__price-wrapper">
       <span class="summary__price-wrapper__label">Books</span>
-      <span class="summary__price-wrapper__price">{{
-        cartItemsTotal() | currency: 'USD'
-      }}</span>
+      <span class="summary__price-wrapper__value">
+        {{ cartItemsTotal() | currency: 'USD' }}
+      </span>
     </div>
     <div>
       <div class="summary__price-wrapper">
         <span class="summary__price-wrapper__label">Shipping</span>
-        <span class="summary__price-wrapper__price">{{
-          shippingPrice() | currency: 'USD'
-        }}</span>
+        <span class="summary__price-wrapper__value">
+          {{ shippingMethodPrice() | currency: 'USD' }}
+        </span>
       </div>
-      <p-divider layout="horizontal" />
     </div>
+    <p-divider layout="horizontal" />
     <div class="summary__price-wrapper">
-      <span class="summary__price-wrapper__label--total">Total</span>
-      <span class="summary__price-wrapper__price--total">{{
-        total() | currency: 'USD'
-      }}</span>
+      <span
+        class="summary__price-wrapper__label summary__price-wrapper__label--total"
+        >Total</span
+      >
+      <span
+        class="summary__price-wrapper__value summary__price-wrapper__value--total"
+      >
+        {{ total() | currency: 'USD' }}
+      </span>
     </div>
   </div>
 
-  <div class="summary__buttons">
-    <p-button
-      [outlined]="true"
-      icon="pi pi-arrow-left"
-      label="Back to address"
-      routerLink="/order/address-information"
-    />
-    <p-button
-      (onClick)="submit()"
-      icon="pi pi-arrow-right"
-      iconPos="right"
-      label="Pay"
-    />
-  </div>
+  @if (submitted()) {
+    <div>
+      @if (!userAddress()) {
+        <div class="summary__error">
+          <span class="pi pi-exclamation-triangle"></span>
+          <div>Fill in delivery address!</div>
+        </div>
+      }
+      @if (!shippingMethod()) {
+        <div class="summary__error">
+          <span class="pi pi-exclamation-triangle"></span>
+          <span>Select shipping method!</span>
+        </div>
+      }
+      @if (!paymentMethod()) {
+        <div class="summary__error">
+          <span class="pi pi-exclamation-triangle"></span>
+          <span>Select payment method!</span>
+        </div>
+      }
+    </div>
+  }
+
+  <p-button
+    class="summary__button"
+    (onClick)="submit()"
+    [loading]="initialLoading()"
+    icon="pi pi-dollar"
+    label="Pay"
+  />
 </div>
