Modify order process store
Improve state structure (separate store on address, shipping and
payment)

--- a/libs/client-web/cart/feature/order-process/src/lib/payment-method/payment-method.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/payment-method/payment-method.component.html
@@ -25,8 +25,8 @@
     >
       <span class="pi pi-wallet"></span>
     </lib-order-process-detail-element>
-    @if (selectedPaymentMethod() === '6-digit-number') {
-      <p-inputOtp class="payment-method__input-otp" [length]="6" />
+    @if (selectedPaymentMethod() === '6-digit-code') {
+      <lib-six-digit-code-form />
     }
   }
 </lib-section-wrapper>
