--- a/libs/client-web/cart/feature/order-process/src/lib/summary/summary.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/summary/summary.component.html
@@ -72,7 +72,7 @@
   <p-button
     class="summary__button"
     (onClick)="submit()"
-    [loading]="initialLoading()"
+    [loading]="initialLoading() || checkoutLoading()"
     icon="pi pi-dollar"
     label="Pay"
   />
