Create orders page in account domain

--- a/apps/client-web/src/styles.scss
+++ b/apps/client-web/src/styles.scss
@@ -191,14 +191,18 @@ p-button.w-full .p-button {
   max-width: 40rem;
 }
 
+.p-sidebar-right--wide .p-sidebar-right {
+  max-width: 50rem;
+}
+
 .p-dropdown {
   border-radius: var(--border-radius);
 }
 
 @media (min-width: 40rem) {
   .p-sidebar-right {
-    border-top-left-radius: calc(var(--border-radius) * 2);
-    border-bottom-left-radius: calc(var(--border-radius) * 2);
+    border-top-left-radius: calc(var(--border-radius));
+    border-bottom-left-radius: calc(var(--border-radius));
   }
 }
 
