Improve styling of orders page
Add position sticky on orders table and menu. Also change gaps and font
sizes for order-details

--- a/libs/client-web/account/feature/orders/src/lib/orders.component.html
+++ b/libs/client-web/account/feature/orders/src/lib/orders.component.html
@@ -1,12 +1,13 @@
 <div class="orders">
   <p-table
+    class="table"
     [value]="orders()"
     selectionMode="single"
     [selection]="selectedOrder()"
     (selectionChange)="selectOrder($event)"
     dataKey="id"
     [tableStyle]="{
-      'min-width': '30rem',
+      width: '100%',
     }"
     [loading]="loading()"
     [showLoader]="false"
