--- a/libs/client-web/account/ui/src/lib/order/order.component.html
+++ b/libs/client-web/account/ui/src/lib/order/order.component.html
@@ -21,26 +21,30 @@
     </div>
   </div>
   <div class="order">
-    <div class="flex flex-column gap-2">
+    <div class="order__row">
       <span class="order__row__header">Order address</span>
-      <div class="flex align-items-center gap-1">
-        <span class="text-color-secondary">
-          {{ orderDetails()?.userAddress?.street }}
-        </span>
-        <span class="text-color-secondary">
-          {{ orderDetails()?.userAddress?.homeNumber }}
-          @if (orderDetails()?.userAddress?.houseNumber) {
-            /{{ orderDetails()?.userAddress?.houseNumber }}
-          }
-        </span>
+      <div class="order__row__adress">
+        <div class="text-color-secondary">
+          <span>{{ orderDetails()?.userAddress?.street }}</span>
+          <span
+            >{{ orderDetails()?.userAddress?.homeNumber }}
+            @if (orderDetails()?.userAddress?.houseNumber) {
+              /{{ orderDetails()?.userAddress?.houseNumber }}
+            }
+          </span>
+        </div>
+        <div>
+          <span class="text-color-secondary"
+            >{{ orderDetails()?.userAddress?.postcode }},
+          </span>
+          <span class="text-color-secondary">{{
+            orderDetails()?.userAddress?.city
+          }}</span>
+        </div>
+        <div class="text-color-secondary">
+          {{ orderDetails()?.userAddress?.country?.name }}
+        </div>
       </div>
-      <div class="text-color-secondary">
-        <span>{{ orderDetails()?.userAddress?.postcode }}, </span>
-        <span>{{ orderDetails()?.userAddress?.city }}</span>
-      </div>
-      <span class="text-color-secondary">
-        {{ orderDetails()?.userAddress?.country?.name }}
-      </span>
     </div>
     <div class="order__row">
       <span class="order__row__header">Personal information</span>
@@ -50,14 +54,14 @@
           {{ orderDetails()?.userAddress?.lastName }}
         </span>
         <span class="text-color-secondary">
-          {{ orderDetails()?.userAddress?.phone }}
+          phone {{ orderDetails()?.userAddress?.phone }}
         </span>
       </div>
     </div>
   </div>
   <div class="order">
     <div class="order__row">
-      <span class="order__header">Payment method</span>
+      <span class="order__row__header">Payment method</span>
       <span class="text-color-secondary">
         {{ orderDetails()?.paymentDetails?.provider }}
       </span>
@@ -73,9 +77,6 @@
   </div>
   <div class="table">
     <span class="order__row__header">Order items</span>
-    <!-- [tableStyle]="{ -->
-    <!--   'min-width': '50rem', -->
-    <!-- }" -->
     <p-table [value]="orderDetails()?.orderItems ?? []">
       <ng-template pTemplate="header">
         <tr>
@@ -127,17 +128,18 @@
     <span class="order__row__header">Cost summary</span>
     <div class="summary__contsainer">
       <div class="summary__row">
-        <span class="order__row__header">Value</span>
+        <span class="summary__header">Books</span>
         <span class="text-color-secondary">
           {{ orderDetails()?.total ?? 0 | currency: 'USD' }}
         </span>
       </div>
       <div class="summary__row">
-        <span class="order__row__header">Shipping cost</span>
+        <span class="summary__header">Shipping</span>
         <span class="text-color-secondary">
           {{ orderDetails()?.shippingMethod?.price ?? 0 | currency: 'USD' }}
         </span>
       </div>
+      <p-divider />
       <div class="summary__total">
         <span class="">Total cost</span>
         <span class="text-color-secondary">
