Add bestsellers, incoming and new books in home page

--- a/apps/client-web/src/app/components/nav/nav.component.html
+++ b/apps/client-web/src/app/components/nav/nav.component.html
@@ -25,7 +25,7 @@
 
   <div class="utility-wrapper">
     <a
-      class="p-button p-button-text search"
+      class="p-button p-button-text search utility"
       [routerLink]="search.routerLink"
       [queryParams]="search.queryParams"
       pTooltip="Search the books"
