--- a/apps/client-web/src/app/components/nav/nav.component.scss
+++ b/apps/client-web/src/app/components/nav/nav.component.scss
@@ -88,9 +88,17 @@
   justify-content: center;
 }
 
+.utility {
+  display: none;
+}
+
 @media (min-width: 1024px) {
   .mobile-menu {
     display: none;
+  }
+
+  .utility {
+    display: flex;
   }
 
   .links {
