--- a/libs/client-web/home/feature/src/lib/home.component.html
+++ b/libs/client-web/home/feature/src/lib/home.component.html
@@ -7,8 +7,8 @@
       routerLink="/browse"
       class="p-button-large header__link"
       pButton
+      [raised]="true"
       size="large"
-      severity="contrast"
     >
       Explore now
     </a>
@@ -21,32 +21,20 @@
     priority
   />
 </header>
-<!-- @defer (on viewport) { -->
-<!--   <section class="premiere"> -->
-<!--     <h3 class="text-2xl text-center mb-8 xl:text-4xl">Premiere of the month</h3> -->
-<!--     <div class="container"> -->
-<!--       <img -->
-<!--         ngSrc="https://primefaces.org/cdn/primeng/images/usercard.png" -->
-<!--         alt="usercard image" -->
-<!--         class="premiere__image" -->
-<!--       /> -->
-<!--       <div class="flex align-items-center justify-content-center"> -->
-<!--         <p class="text-lg"> -->
-<!--           Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit -->
-<!--           enim labore culpa sint ad nisi Lorem pariatur mollit ex esse -->
-<!--           exercitation amet. Nisi anim cupidatat excepteur officia. -->
-<!--           Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate -->
-<!--           voluptate dolor minim nulla est proident. Nostrud officia pariatur ut -->
-<!--           officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit -->
-<!--           commodo officia dolor Lorem duis laboris cupidatat officia voluptate. -->
-<!--           Culpa proident adipisicing id nulla nisi laboris ex in Lorem sunt duis -->
-<!--           officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis -->
-<!--           sunt velit enim. Voluptate laboris sint cupidatat ullamco ut ea -->
-<!--           consectetur et est culpa et culpa duis. -->
-<!--         </p> -->
-<!--       </div> -->
-<!--     </div> -->
-<!--   </section> -->
-<!-- } @placeholder { -->
-<!--   <div>Loading...</div> -->
-<!-- } -->
+<main class="main">
+  @defer (on viewport) {
+    <lib-books-section tag="incoming" [bookTag]="bookTag.INCOMING" />
+  } @placeholder {
+    <div>Loading...</div>
+  }
+  @defer (on viewport) {
+    <lib-books-section tag="bestsellers" [bookTag]="bookTag.BESTSELLER" />
+  } @placeholder {
+    <div>Loading...</div>
+  }
+  @defer (on viewport) {
+    <lib-books-section tag="new" [bookTag]="bookTag.NEW" />
+  } @placeholder {
+    <div>Loading...</div>
+  }
+</main>
