--- a/libs/client-web/home/feature/src/lib/home.component.scss
+++ b/libs/client-web/home/feature/src/lib/home.component.scss
@@ -1,17 +1,14 @@
-:host ::ng-deep {
-  .p-button {
-    color: var(--primary-color-text);
-    border: 1px solid var(--primary-color);
-    background-color: var(--primary-color);
-  }
+.main {
+  display: flex;
+  gap: 2rem;
+  margin-top: 4rem;
+  flex-direction: column;
 }
 
 .header {
-  /* min-height: calc(100svh - var(--header-height)); */
   width: 100%;
   display: flex;
   flex-direction: column-reverse;
-  /* align-items: center; */
   justify-content: center;
   position: relative;
 
@@ -32,17 +29,6 @@
 
   &__link {
     max-width: fit-content;
-  }
-}
-
-.premiere {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin: 12rem auto;
-
-  &__image {
-    width: 100%;
   }
 }
 
@@ -67,6 +53,12 @@
 
     &__link {
       font-size: 2rem;
+    }
+  }
+
+  .bestsellers {
+    &__books {
+      gap: 2rem;
     }
   }
 }
