--- a/libs/client-web/shared/ui/src/lib/book-card/book-card.component.scss
+++ b/libs/client-web/shared/ui/src/lib/book-card/book-card.component.scss
@@ -5,10 +5,22 @@
   display: flex;
   flex-direction: column;
   border-radius: var(--border-radius);
+  max-width: var(--card-max-width);
+  width: 100%;
+
+  &__image-container {
+    // width: var(--max-card-width);
+    width: 100%;
+    /* min-width: var(--max-card-width); */
+    height: 26rem;
+    border-radius: var(--border-radius);
+    position: relative;
+  }
 
   &__image {
     width: 100%;
-    height: 26rem;
+    height: 100%;
+    object-fit: cover;
     border-radius: var(--border-radius);
   }
 
