--- a/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
+++ b/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
@@ -1,7 +1,7 @@
 <div class="books-grid">
   @if (loading() && books().length === 0) {
     <div class="books-grid__content">
-      @for (_ of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]; track $index) {
+      @for (_ of skeleconts(); track $index) {
         <lib-book-card-skeleton />
       }
     </div>
