--- a/apps/client-web/src/app/components/nav/nav.component.html
+++ b/apps/client-web/src/app/components/nav/nav.component.html
@@ -13,7 +13,6 @@
             [routerLink]="item.url"
             routerLinkActive="underline"
             [queryParams]="item.queryParams"
-            [state]="item.state"
             class="link"
           >
             {{ item.name }}
@@ -25,9 +24,9 @@
 
   <div class="utility-wrapper">
     <a
-      class="p-button p-button-text search utility"
-      [routerLink]="search.routerLink"
-      [queryParams]="search.queryParams"
+      class="p-button p-button-text search"
+      routerLink="/browse"
+      [queryParams]="null"
       pTooltip="Search the books"
       tooltipPosition="bottom"
     >
@@ -57,33 +56,5 @@
     </p-menu>
 
     <ng-content select="lib-cart-sidebar" />
-
-    <p-button
-      (click)="showSidebar()"
-      icon="pi pi-align-left"
-      class="mobile-menu"
-    ></p-button>
-    <p-sidebar
-      #sidebarRef
-      [(visible)]="sidebarVisible"
-      position="left"
-      appendTo="body"
-      [blockScroll]="true"
-    >
-      <ng-template pTemplate="header">
-        <div class="text-xl md:text-2xl xl:text-[2rem] text-white no-underline">
-          <span class="font-bold text-primary">Story</span>
-          <span class="uppercase">Stash</span>
-        </div>
-      </ng-template>
-      <p-accordion [multiple]="false" [activeIndex]="[]">
-        <p-accordionTab header="Categories">
-          <!-- <p-menu [model]="categories()" class="p-menu-sidebar" /> -->
-        </p-accordionTab>
-        <p-accordionTab header="User" class="md:hidden">
-          <p-menu [model]="menuItems()" class="p-menu-sidebar" />
-        </p-accordionTab>
-      </p-accordion>
-    </p-sidebar>
   </div>
 </nav>
