--- a/apps/client-web/src/styles.scss
+++ b/apps/client-web/src/styles.scss
@@ -2,7 +2,6 @@
 @import 'primeng/resources/primeng.css';
 
 :root {
-  // --header-height: 4.8125rem;
   --max-card-width: 20rem;
   --border-radius: 1rem;
   --max-content-height: calc(100svh - 4.25rem - 2rem);
@@ -32,7 +31,7 @@ h6 {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   font-family: var(--font-family);
   min-height: 100svh;
@@ -50,7 +49,6 @@ a {
 }
 
 input {
-  // border-radius: var(--border-radius);
   border-radius: 0.75rem;
 }
 
@@ -70,7 +68,6 @@ input {
   word-spacing: inherit;
 }
 
-// Prime
 .p-breadcrumb {
   overflow: hidden;
 }
