--- a/libs/client-web/browse/feature/books/src/lib/filters/filters.component.scss
+++ b/libs/client-web/browse/feature/books/src/lib/filters/filters.component.scss
@@ -9,9 +9,20 @@
 }
 
 .filters {
-  position: sticky;
-  top: calc(var(--header-height) + 2rem);
-  height: calc(100svh - var(--header-height) - 4rem);
-  overflow-y: auto;
-  width: 100%;
+  display: none;
+}
+
+@media (min-width: 1280px) {
+  .filters {
+    display: block;
+    position: sticky;
+    top: calc(var(--header-height) + 2rem);
+    height: calc(100svh - var(--header-height) - 4rem);
+    overflow-y: auto;
+    width: 100%;
+  }
+
+  .open-sidebar-button {
+    display: none;
+  }
 }
