--- a/libs/client-web/account/ui/src/lib/order/order.component.scss
+++ b/libs/client-web/account/ui/src/lib/order/order.component.scss
@@ -15,6 +15,17 @@
   width: 100%;
 }
 
+.image {
+  object-fit: cover;
+  padding: 1rem 0;
+  border-radius: var(--border-radius);
+
+  &-wrapper {
+    height: 11rem;
+    position: relative;
+  }
+}
+
 .order {
   background-color: var(--surface-hover);
   border-radius: var(--border-radius);
