--- a/libs/client-web/browse/feature/books/src/lib/books.component.scss
+++ b/libs/client-web/browse/feature/books/src/lib/books.component.scss
@@ -1,30 +1,24 @@
 .books {
   display: flex;
-  gap: 1rem;
-
+  gap: var(--gap);
   &__content {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: var(--gap);
     width: 100%;
 
     &-bar {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      gap: 1rem;
-
-      // &__input {
-      //   max-width: 30rem;
-      //   width: 100%;
-      // }
+      gap: var(--gap);
     }
 
     &-row {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      gap: 0.5rem;
+      gap: var(--gap);
     }
 
     &-books {
@@ -37,7 +31,7 @@
         width: 100%;
         display: grid;
         grid-template-columns: 1fr;
-        gap: 1rem;
+        gap: var(--gap);
       }
     }
   }
